# image-fraud-detection

./: .gitignore  CLAUDE.md  Makefile  README.md  config.yml  pyproject.toml  report-251119-1123.md  report-251119-1131.md
docs/: CHALLENGE.md  REQUIREMENTS.md  SOLUTION.md
docs/research/: RESEARCH.md  claude_research.md  perplexity_research.md
src/forgery_detection/: __init__.py  config.py  config_loader.py  main.py
src/forgery_detection/modes/: evaluation_mode.py  file_type_recipes.py
src/forgery_detection/parsers/: parsers.py
src/forgery_detection/services/: __init__.py  classifier.py  format_detector.py  image_loader.py  recipe_selector.py  report_generator.py  score_aggregator.py
src/forgery_detection/services/detectors/: __init__.py  copy_move_detector.py  detector.py  ela_detector.py  metadata_detector.py  noise_variance_detector.py  reverse_search_detector.py  statistical_detector.py
src/forgery_detection/utils/: __init__.py  console.py
tests/: test_classifier.py  test_console.py  test_copy_move_detector.py  test_ela_detector.py  test_evaluation_mode.py  test_format_detector.py  test_metadata_detector.py  test_noise_variance_detector.py  test_recipe_selector.py  test_score_aggregator.py  test_statistical_detector.py
